Changed code to use <video> instead of <iframe>

--- a/guidance.html
+++ b/guidance.html
@@ -31,17 +31,16 @@
 <div class="container mx-auto px-2 bg-white mb-4">
 
 <div class="video-container text-justify mx-4 my-4 rounded">
-  
     <div class="responsive-video">
-      <iframe src="http://www.realscience.org.uk/3ml/vids/2findastory.mp4" width="600" height="338" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+      <h4> How to search for stories </h4>
+      <video src="http://www.realscience.org.uk/3ml/vids/2findastory.mp4" width="150" height="auto" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></video>
     </div>
   </div>
-    
   <div class="video-container">
     <div class="responsive-video">
-      <iframe src="https://www.youtube.com/embed/aBnGzklDHnM?rel=0&amp;showinfo=0" width="600" height="338" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+      <h4> How to do connect and question</h4>
+      <video src="http://www.realscience.org.uk/3ml/vids/3connectandquestion.mp4" width="150" height="auto" frameborder="0" webkitAllowFullScreen mozallowfullscreen allowFullScreen></video>
     </div>
-    
   </div>
 </div>
 <div class="flex-1"></div>
