Updated with content for resources and guidance page

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="about.html">About</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="guidance.html">Guidance</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="resources.html">Resources</a>
+        <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="https://3ml.org.uk/">3ML App</a>
       </div>
     </div>
   </div>
@@ -36,15 +37,15 @@
             Your browser does not support the video tag.
         </video>
         <!-- Intro-->
-        <div class="text-justify w-full px-2 md:w-1/2 mb-4">
-            <p>
+        <div class="text-lg text-justify w-full px-6 md:w-1/2 mb-4 flex flex-col justify-around">
+            <p class="self-stretch">
                 <span class="font-bold">3ML </span> works like this:
             </p>
-            <p>
+            <p class="self-stretch">
                 First your pupils read a very short story, chosen - by you or them - from over 1000 in our library.
                 Then they complete four activities to help them understand and remember what they've read.
             </p>
-            <p>
+            <p class="self-stretch">
                 If you haven't used 3ml before with your pupils, please take a look at the short videos on our Guidance
                 page.
             </p>
@@ -65,66 +66,66 @@
             <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/1142" class="block shadow w-full h-full p-1"
                     style="background-image: url(&quot;https://3ml.org.uk/thumbs/senseofcertainty.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
                     title="Where I belong">
-                    <h3 class="text-sm text-bold text-white ">Where I belong</h3>
+                    <h3 class="text-sm font-bold text-white ">Where I belong</h3>
                 </a></div>
             <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/902" class="block shadow w-full h-full p-1"
                     style="background-image: url(&quot;https://3ml.org.uk/thumbs/585ab148dc6df.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
                     title="Young dreams">
-                    <h3 class="text-sm text-bold text-white ">Young dreams</h3>
+                    <h3 class="text-sm font-bold text-white ">Young dreams</h3>
                 </a></div>
             <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/901" class="block shadow w-full h-full p-1"
                     style="background-image: url(&quot;https://3ml.org.uk/thumbs/5857d71de9331.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
                     title="Atom bomb vs volcano">
-                    <h3 class="text-sm text-bold text-white ">Atom bomb vs volcano</h3>
+                    <h3 class="text-sm font-bold text-white ">Atom bomb vs volcano</h3>
                 </a></div>
             <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/897" class="block shadow w-full h-full p-1"
                     style="background-image: url(&quot;https://3ml.org.uk/thumbs/5857d12062485.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
                     title="Dog TV">
-                    <h3 class="text-sm text-bold text-white ">Dog TV</h3>
+                    <h3 class="text-sm font-bold text-white ">Dog TV</h3>
                 </a></div>
             <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/892" class="block shadow w-full h-full p-1"
                     style="background-image: url(&quot;https://3ml.org.uk/thumbs/5852d393a64a4.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
                     title="Apprentice engineer">
-                    <h3 class="text-sm text-bold text-white ">Apprentice engineer</h3>
+                    <h3 class="text-sm font-bold text-white ">Apprentice engineer</h3>
                 </a></div>
             <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/876" class="block shadow w-full h-full p-1"
                     style="background-image: url(&quot;https://3ml.org.uk/thumbs/57cf2264371b8.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
                     title="Under the sea">
-                    <h3 class="text-sm text-bold text-white ">Under the sea</h3>
+                    <h3 class="text-sm font-bold text-white ">Under the sea</h3>
                 </a></div>
             <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/864" class="block shadow w-full h-full p-1"
                     style="background-image: url(&quot;https://3ml.org.uk/thumbs/57cc899bda43d.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
                     title="Hardy Martians">
-                    <h3 class="text-sm text-bold text-white ">Hardy Martians</h3>
+                    <h3 class="text-sm font-bold text-white ">Hardy Martians</h3>
                 </a></div>
             <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/860" class="block shadow w-full h-full p-1"
                     style="background-image: url(&quot;https://3ml.org.uk/thumbs/57cefbd82a024.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
                     title="Tough guys in space">
-                    <h3 class="text-sm text-bold text-white ">Tough guys in space</h3>
+                    <h3 class="text-sm font-bold text-white ">Tough guys in space</h3>
                 </a>
             </div>
             <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/799" class="block shadow w-full h-full p-1"
                     style="background-image: url(&quot;https://3ml.org.uk/thumbs/575fc893a139c.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
                     title="No cat names">
-                    <h3 class="text-sm text-bold text-white ">No cat names</h3>
+                    <h3 class="text-sm font-bold text-white ">No cat names</h3>
                 </a>
             </div>
             <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/796" class="block shadow w-full h-full p-1"
                     style="background-image: url(&quot;https://3ml.org.uk/thumbs/575e78f9914b9.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
                     title="No more gold and silver">
-                    <h3 class="text-sm text-bold text-white ">No more gold and silver</h3>
+                    <h3 class="text-sm font-bold text-white ">No more gold and silver</h3>
                 </a>
             </div>
             <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/646" class="block shadow w-full h-full p-1"
                     style="background-image: url(&quot;https://3ml.org.uk/thumbs/56a63c1e80b76.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
                     title="Fast-moving space station">
-                    <h3 class="text-sm text-bold text-white ">Fast-moving space station</h3>
+                    <h3 class="text-sm font-bold text-white ">Fast-moving space station</h3>
                 </a>
             </div>
             <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/594" class="block shadow w-full h-full p-1"
                     style="background-image: url(&quot;https://3ml.org.uk/thumbs/57d025ac547bb.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
                     title="Are they weightless?">
-                    <h3 class="text-sm text-bold text-white ">Are they weightless?</h3>
+                    <h3 class="text-sm font-bold text-white ">Are they weightless?</h3>
                 </a>
             </div>
         </div>
