--- a/resources.html
+++ b/resources.html
@@ -24,12 +24,129 @@
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="about.html">About</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="guidance.html">Guidance</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="resources.html">Resources</a>
+        <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="https://3ml.org.uk/">3ML App</a>
       </div>
     </div>
   </div>
 </nav>
 <div class="container mx-auto px-2 bg-white mb-4">
-
+<div class="w-2/3 mx-auto">
+    <div class="bg-white shadow-md rounded my-6">
+        <h3 class="shadow-lg text-white tracking-widest text-left h-10 bg-tml-blue my-4 p-2">
+            Review questions - curriculum topics
+        </h3>
+        <table class="text-center w-full border-collapse">
+            <!--Border collapse doesn't work on this site yet but it's available in newer tailwind versions -->
+            <thead>
+                <tr>
+                    <th class="py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light">Curriculum
+                        topic</th>
+                    <th class="py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light">Story
+                        levels</th>
+                    <th class="py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light">Link
+                        to Review Questions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="hover:text-tml-blueer">
+                    <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
+                        <img src="http://www.realscience.org.uk/3ml/img/liftthumb.jpg">
+                    </td>
+                    <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
+                        0-4 </td>
+                    <td class="py-4 px-6 border-b border-grey-light">
+                        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsForces.pdf" class="text-grey-lighter py-1 px-3 text-sm bg-green hover:text-tml-blue">Forces</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div class="bg-white shadow-md rounded my-6">
+        <h3 class="shadow-lg text-white tracking-widest text-left h-10 bg-tml-blue my-4 p-2">
+            Review questions - researchers </h3>
+        <table class="text-center w-full border-collapse">
+            <!--Border collapse doesn't work on this site yet but it's available in newer tailwind versions -->
+            <thead>
+                <tr>
+                    <th class="py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light">Researcher</th>
+                    <th class="py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light">What
+                        they do?</th>
+                    <th class="py-4 px-6 bg-grey-lightest font-bold uppercase text-sm text-grey-dark border-b border-grey-light">Link
+                        to Review Questions</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="hover:text-tml-blueer text-justify">
+                    <td class="py-4 px-6 border-b border-grey-light">
+                        <img src="http://www.realscience.org.uk/3ml/img/janethumb2.jpg">
+                    </td>
+                    <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
+                        Jane Goodall is the world's leading expert on wild chimpanzees.</td>
+                    <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
+                        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsJaneGoodall.pdf" class="text-grey-lighter py-1 px-3 rounded text-sm bg-green hover:text-tml-blue">Jane
+                            Goodall</a>
+                    </td>
+                </tr>
+                <tr class="hover:text-tml-blueer text-justify">
+                    <td class="py-4 px-6 border-b border-grey-light">
+                        <img src="http://www.realscience.org.uk/3ml/img/dawnthumb.jpg">
+                    </td>
+                    <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
+                        Dawn is a scientist at Daresbury Laboratory. (But take a look at her story 'The
+                        In-betweeners'.)</td>
+                    <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
+                        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsDawnGeatches.pdf" class="text-grey-lighter py-1 px-3 rounded text-sm bg-green hover:text-tml-blue">Dawn
+                            Geatches</a>
+                    </td>
+                </tr>
+                <tr class="hover:text-tml-blueer text-justify">
+                    <td class="py-4 px-6 border-b border-grey-light">
+                        <img src="http://www.realscience.org.uk/3ml/img/valeriathumb.jpg">
+                    </td>
+                    <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
+                        Valeria is a scientist at Daresbury Laboratory.</td>
+                    <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
+                        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsValeriaLosasso.pdf" class="text-grey-lighter py-1 px-3 rounded text-sm bg-green hover:text-tml-blue">Valeria
+                            Losasso</a>
+                    </td>
+                </tr>
+                <tr class="hover:text-tml-blueer text-justify">
+                    <td class="py-4 px-6 border-b border-grey-light">
+                        <img src="http://www.realscience.org.uk/3ml/img/jameswilsonthumb.jpg">
+                    </td>
+                    <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
+                        James is an engineer at Daresbury Laboratory.</td>
+                    <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
+                        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsJamesWilson.pdf" class="text-grey-lighter py-1 px-3 rounded text-sm bg-green hover:text-tml-blue">James
+                            Wilson</a>
+                    </td>
+                </tr>
+                <tr class="hover:text-tml-blueer text-justify">
+                    <td class="py-4 px-6 border-b border-grey-light">
+                        <img src="http://www.realscience.org.uk/3ml/img/jamesgebbiethumb.jpg">
+                    </td>
+                    <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
+                        James is a computer scientist at Daresbury Laboratory.</td>
+                    <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
+                        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsJamesGebbie.pdf" class="text-grey-lighter py-1 px-3 rounded text-sm bg-green hover:text-tml-blue">James
+                            Gebbie</a>
+                    </td>
+                </tr>
+                <tr class="hover:text-tml-blueer text-justify">
+                    <td class="py-4 px-6 border-b border-grey-light">
+                        <img src="http://www.realscience.org.uk/3ml/img/chrispearsonthumb.jpg">
+                    </td>
+                    <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
+                        Chris is an astronomer at RAL Space.</td>
+                    <td class="py-4 px-6 border-b border-grey-light text-grey-lighter text-sm">
+                        <a href="http://www.realscience.org.uk/3ml/pdfs/QuestionsChrisPearson.pdf" class="text-grey-lighter py-1 px-3 rounded text-sm bg-green hover:text-tml-blue">Chris
+                            Pearson</a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
 </div>
 <div class="flex-1"></div>
 <footer class="bg-white w-screen">
