--- a/guidance.html
+++ b/guidance.html
@@ -24,123 +24,60 @@
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="about.html">About</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="guidance.html">Guidance</a>
         <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="resources.html">Resources</a>
+        <a class="block mt-4 md:inline-block md:mt-0 text-teal-200 hover:text-white mr-4" href="https://3ml.org.uk/">3ML App</a>
       </div>
     </div>
   </div>
 </nav>
 <div class="container mx-auto px-2 bg-white mb-4">
-<div class="video-container flex flex-wrap mx-1">
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1">
-        <h3 class="text-sm text-bold text-black">How to search for stories</h3>
-        <video class="block shadow w-full h-full p-1" src="http://www.realscience.org.uk/3ml/vids/2findastory.mp4"></video>
+<div class="video-container flex flex-wrap m-1 p-2">
+    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 px-2 mt-4">
+        <h3 class="text-sm font-bold mb-1 text-black mb-1">How to search for stories</h3>
+        <video class="block shadow w-full h-auto p-1" src="http://www.realscience.org.uk/3ml/vids/2findastory.mp4"></video>
     </div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1">
-        <h3 class="text-sm text-bold text-black">How to do connect and question</h3>
-        <video class="block shadow w-full h-full p-1" src="http://www.realscience.org.uk/3ml/vids/3connectandquestion.mp4"></video>
-  </div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/901" class="block shadow w-full h-full p-1"
-            style="background-image: url(&quot;https://3ml.org.uk/thumbs/5857d71de9331.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-            title="Atom bomb vs volcano">
-            <h3 class="text-sm text-bold text-white ">Atom bomb vs volcano</h3>
-        </a></div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/897" class="block shadow w-full h-full p-1"
-            style="background-image: url(&quot;https://3ml.org.uk/thumbs/5857d12062485.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-            title="Dog TV">
-            <h3 class="text-sm text-bold text-white ">Dog TV</h3>
-        </a></div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/892" class="block shadow w-full h-full p-1"
-            style="background-image: url(&quot;https://3ml.org.uk/thumbs/5852d393a64a4.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-            title="Apprentice engineer">
-            <h3 class="text-sm text-bold text-white ">Apprentice engineer</h3>
-        </a></div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/876" class="block shadow w-full h-full p-1"
-            style="background-image: url(&quot;https://3ml.org.uk/thumbs/57cf2264371b8.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-            title="Under the sea">
-            <h3 class="text-sm text-bold text-white ">Under the sea</h3>
-        </a></div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/864" class="block shadow w-full h-full p-1"
-            style="background-image: url(&quot;https://3ml.org.uk/thumbs/57cc899bda43d.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-            title="Hardy Martians">
-            <h3 class="text-sm text-bold text-white ">Hardy Martians</h3>
-        </a></div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/860" class="block shadow w-full h-full p-1"
-            style="background-image: url(&quot;https://3ml.org.uk/thumbs/57cefbd82a024.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-            title="Tough guys in space">
-            <h3 class="text-sm text-bold text-white ">Tough guys in space</h3>
-        </a>
+    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 px-2 mt-4">
+        <h3 class="text-sm font-bold mb-1 text-black mb-1">How to do connect and question</h3>
+        <video class="block shadow w-full h-auto p-1" src="http://www.realscience.org.uk/3ml/vids/3connectandquestion.mp4"></video>
     </div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/799" class="block shadow w-full h-full p-1"
-            style="background-image: url(&quot;https://3ml.org.uk/thumbs/575fc893a139c.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-            title="No cat names">
-            <h3 class="text-sm text-bold text-white ">No cat names</h3>
-        </a>
+    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 px-2 mt-4">
+        <h3 class="text-sm font-bold mb-1 text-black mb-1"> How to do summarise and clarify</h3>
+        <video class="block shadow w-full h-auto p-1" src="http://www.realscience.org.uk/3ml/vids/4summariseandclarfiy.mp4"></video>
     </div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/796" class="block shadow w-full h-full p-1"
-            style="background-image: url(&quot;https://3ml.org.uk/thumbs/575e78f9914b9.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-            title="No more gold and silver">
-            <h3 class="text-sm text-bold text-white ">No more gold and silver</h3>
-        </a>
+    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 px-2 mt-4">
+        <h3 class="text-sm font-bold mb-1 text-black mb-1">How to calculate the readability of a piece of writing</h3>
+        <video class="block shadow w-full h-auto p-1" src="http://www.realscience.org.uk/3ml/vids/5findingtheflesch.mp4"></video>
     </div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/646" class="block shadow w-full h-full p-1"
-            style="background-image: url(&quot;https://3ml.org.uk/thumbs/56a63c1e80b76.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-            title="Fast-moving space station">
-            <h3 class="text-sm text-bold text-white ">Fast-moving space station</h3>
-        </a>
+    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 px-2 mt-4">
+        <h3 class="text-sm font-bold mb-1 text-black mb-1">How to register your school for 3ml</h3> <br>
+        <video class="block shadow w-full h-auto p-1" src="http://www.realscience.org.uk/3ml/vids/6registeringaschool.mp4"></video>
     </div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 h-32 lg:h-40 px-1"><a href="#/stories/594" class="block shadow w-full h-full p-1"
-            style="background-image: url(&quot;https://3ml.org.uk/thumbs/57d025ac547bb.jpg&quot;); background-size: cover; background-position: center center; box-shadow: rgba(0, 0, 0, 0.3) 1px 1px 3px;"
-            title="Are they weightless?">
-            <h3 class="text-sm text-bold text-white ">Are they weightless?</h3>
-        </a>
+    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 px-2 mt-4">
+        <h3 class="text-sm font-bold mb-1 text-black mb-1">How to make accounts for your pupils</h3>
+        <video class="block shadow w-full h-auto p-1" src="http://www.realscience.org.uk/3ml/vids/7makingpupilsaccounts.mp4"></video>
     </div>
-
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 m-1 h-auto px-1">
-        <h3 class="text-sm text-bold text-black">How to search for stories</h3>
-        <video class="block shadow w-full h-full p-1" src="http://www.realscience.org.uk/3ml/vids/2findastory.mp4"></video>
+    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 px-2 mt-4">
+        <h3 class="text-sm font-bold mb-1 text-black mb-1">How to collect pupils into a class</h3> <br>
+        <video class="block shadow w-full h-auto p-1" src="http://www.realscience.org.uk/3ml/vids/8makingaclass.mp4"></video>
     </div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 m-1 h-auto px-1">
-        <h3 class="text-sm text-bold text-black">How to do connect and question</h3>
-        <video class="block shadow w-full h-full p-1" src="http://www.realscience.org.uk/3ml/vids/3connectandquestion.mp4"></video>
+    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 px-2 mt-4">
+        <h3 class="text-sm font-bold mb-1 text-black mb-1">How to make an anthology of stories for pupils to work through</h3>
+        <video class="block shadow w-full h-auto p-1" src="http://www.realscience.org.uk/3ml/vids/9makingananthology.mp4"></video>
     </div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 m-1 h-auto px-1">
-        <h3 class="text-sm text-bold text-black"> How to do summarise and clarify</h3>
-        <video class="block shadow w-full h-full p-1" src="http://www.realscience.org.uk/3ml/vids/4summariseandclarfiy.mp4"></video>
+    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 px-2 mt-4">
+        <h3 class="text-sm font-bold mb-1 text-black mb-1">How to make accounts for other teachers</h3>
+        <video class="block shadow w-full h-auto p-1" src="http://www.realscience.org.uk/3ml/vids/10extrateacheraccounts.mp4"></video>
     </div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 m-1 h-auto px-1">
-        <h3 class="text-sm text-bold text-black">How to calculate the readability of a piece of writing</h3>
-        <video class="block shadow w-full h-full p-1" src="http://www.realscience.org.uk/3ml/vids/5findingtheflesch.mp4"></video>
+    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 px-2 mt-4">
+        <h3 class="text-sm font-bold mb-1 text-black mb-1">How to set or change a pupil password</h3>
+        <video class="block shadow w-full h-auto p-1" src="http://www.realscience.org.uk/3ml/vids/11NewPupilPassword.mp4"></video>
     </div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 m-1 h-auto px-1">
-        <h3 class="text-sm text-bold text-black">How to register your school for 3ml</h3>
-        <video class="block shadow w-full h-full p-1" src="http://www.realscience.org.uk/3ml/vids/6registeringaschool.mp4"></video>
+    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 px-2 mt-4">
+        <h3 class="text-sm font-bold mb-1 text-black mb-1">Motivation: Why 3ml? </h3> <br>
+        <video class="block shadow w-full h-auto p-1" src="http://www.realscience.org.uk/3ml/vids/0Why3ml.mp4"></video>
     </div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 m-1 h-auto px-1">
-        <h3 class="text-sm text-bold text-black">How to make accounts for your pupils</h3>
-        <video class="block shadow w-full h-full p-1" src="http://www.realscience.org.uk/3ml/vids/7makingpupilsaccounts.mp4"></video>
-    </div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 m-1 h-auto px-1">
-        <h3 class="text-sm text-bold text-black">How to collect pupils into a class</h3>
-        <video class="block shadow w-full h-full p-1" src="http://www.realscience.org.uk/3ml/vids/8makingaclass.mp4"></video>
-    </div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 m-1 h-auto px-1">
-        <h3 class="text-sm text-bold text-black">How to make an anthology of stories for pupils to work through</h3>
-        <video class="block shadow w-full h-full p-1" src="http://www.realscience.org.uk/3ml/vids/9makingananthology.mp4"></video>
-    </div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 m-1 h-auto px-1">
-        <h3 class="text-sm text-bold text-black">How to make accounts for other teachers</h3>
-        <video class="block shadow w-full h-full p-1" src="http://www.realscience.org.uk/3ml/vids/10extrateacheraccounts.mp4"></video>
-    </div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 m-1 h-auto px-1">
-        <h3 class="text-sm text-bold text-black">How to set or change a pupil password</h3>
-        <video class="block shadow w-full h-full p-1" src="http://www.realscience.org.uk/3ml/vids/11NewPupilPassword.mp4"></video>
-    </div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 m-1 h-auto px-1">
-        <h3 class="text-sm text-bold text-black">Motivation</h3>
-        <video class="block shadow w-full h-full p-1" src="http://www.realscience.org.uk/3ml/vids/0Why3ml.mp4"></video>
-    </div>
-    <div class="w-1/2 sm:w-1/3 md:w-1/4 m-1 h-auto px-1">
-        <h3 class="text-sm text-bold text-black">How hard it is to find readable science stories</h3>
-        <video class="block shadow w-full h-full p-1" src="http://www.realscience.org.uk/3ml/vids/1findingsciencestories.mp4"></video>
+    <div class="w-1/2 sm:w-1/3 md:w-1/4 mb-2 px-2 mt-4">
+        <h3 class="text-sm font-bold mb-1 text-black mb-1">How hard it is to find readable science stories</h3>
+        <video class="block shadow w-full h-auto p-1" src="http://www.realscience.org.uk/3ml/vids/1findingsciencestories.mp4"></video>
     </div>
 </div>
 </div>
